scrollbar: fix scrollbar issue

--- a/css/style.scss
+++ b/css/style.scss
@@ -1,13 +1,12 @@
 $font-segoe-normal: 'Segoe UI';
 $font-family-sans-fallback: 'Arial', sans-serif;
-$font-family-sans: $font-segoe-normal, 'Source Sans Pro', 'Helvetica Neue',
-  'Helvetica', $font-family-sans-fallback;
+$font-family-sans: $font-segoe-normal, 'Source Sans Pro', 'Helvetica Neue', 'Helvetica', $font-family-sans-fallback;
 $element-border: #e6e6e6;
 $light-blue: lighten(#bbe9ff, 8%);
 $para-text: #9faab7;
 $table-font: 12px;
 $blue: #1fb6ff;
-$blue-selected: #f0f3f9 ;
+$blue-selected: #f0f3f9;
 body {
   margin: 0;
 }
@@ -23,7 +22,12 @@ body {
   .table-row {
     display: flex;
     align-items: stretch;
-    // padding-right: 17px;
+    .scrolled {
+      z-index: 999;
+      position: relative;
+      background: white;
+      box-shadow: 1px 0px 3px 0px rgba(0, 0, 0, 0.14);
+    }
     .t-head {
       font-weight: bold;
       color: $para-text;
@@ -39,6 +43,7 @@ body {
       justify-content: center;
       position: relative;
       box-sizing: border-box;
+
       &.selected {
         box-shadow: inset 0 0 0px 1px $blue;
         background-color: $blue-selected !important;
@@ -102,7 +107,6 @@ body {
     flex-direction: column;
     overflow: hidden;
     box-sizing: border-box;
-  
   }
 
   .Select {
@@ -212,18 +216,26 @@ body {
     border-radius: 2px;
   }
 }
-.fixed{
-  z-index: 999;
-  position: relative;
-  background: white;
-  &.scrolled{
-    box-shadow: 1px 0px 3px 0px rgba(0, 0, 0, 0.14);
-  }
-}
-.l-fixed{
-  z-index: 999;
-  position: relative;
-  overflow: visible;
-  background: white;
 
+.ReactSheet-table {
+  position: relative;
+  .scrollBar-container {
+    position: absolute;
+    right: 0;
+    background: rgba(black, 0.3);
+    width: 10px;
+    height: 100%;
+    z-index: 9999;
+    .scrollThumb {
+      display: block;
+      width: 6px;
+      // margin: 0 auto;
+      background-color: white;
+      height: 50px;
+      border-radius: 25px;
+      position: absolute;
+      left: 50%;
+      margin-left: -3px;
+    }
+  }
 }
